Correções para o trabalho: fix overflow, ajuste de diretórios e limpeza de código